compiler-core/src/type_/tests/snapshots/glistix_core__type___tests__nix__nix_unsafe_int_in_const.snap
---
source: compiler-core/src/type_/tests/nix.rs
expression: const i = 9_223_372_036_854_775_808
---
----- SOURCE CODE
const i = 9_223_372_036_854_775_808

----- ERROR
error: Int is outside Nix's integer range
  ┌─ /src/one/two.gleam:1:11
  │
1 │ const i = 9_223_372_036_854_775_808
  │           ^^^^^^^^^^^^^^^^^^^^^^^^^

This integer value is too large to be represented by Nix's integer type. To
avoid this error integer values must be in the range -(2^63 - 1) - (2^63 -
1).
